@@ -1,3 +1,7 @@
+* Thu Aug 25 2011 Thunor <thunorsif@hotmail.com>
+- Overhauled the fileselect action function which includes file filters.
+- Added a list_t_free() function to free list_t structs if required.
+
 * Tue Aug 23 2011 Thunor <thunorsif@hotmail.com>
 - Modified icon from theme code so that a gtk-missing-image is shown
   when an image isn't found, similar to the image from file code.
